fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -129,11 +129,6 @@ header{
     border-radius: 0 0 15px 15px;
 }
 
-.bookButtons>*{
-    border: 1px solid black;
-    padding: 1rem 3rem;
-}
-
 input[type="checkbox"]{
     height: 2rem;
     width: 2rem;
@@ -148,7 +143,7 @@ input[type="checkbox"]{
 }
 
 .removeBook{
-    width: 25%;
+    width: 15%;
     fill: #ffffff;
     cursor: pointer;
 }
